fixes the local port:3000 already in use issue

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    
-
-    <a href ="/cats/fact">Get a Cat Fact</a>
-    
-
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= title || 'Cat Fact App' %></title>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+</head>
+<body>
+    <a href="/cats/fact">Get a cat fact</a>
+</body>
 </html>
